--- a/content/home-hero.de.htm
+++ b/content/home-hero.de.htm
@@ -1,5 +1,5 @@
 <div class="col-12 col-md-6">
-    <h1 class="display-3">October CMS Posts Plugin</h1>
+    <h1 class="display-3">Winter CMS Posts Plugin</h1>
     <p>
         Dies ist eine einfache Bootstrap 4-Vorlage mit Beispielen, die Ihnen bei der Einrichtung des Posts-Plugins helfen.
     </p>
