--- a/content/home-hero.htm
+++ b/content/home-hero.htm
@@ -1,5 +1,5 @@
 <div class="col-12 col-md-6">
-    <h1 class="display-3">October CMS Posts Plugin</h1>
+    <h1 class="display-3">Winter CMS Posts Plugin</h1>
     <p>
         This is a simple Bootstrap 4 template with examples to help you set up the Posts plugin.
     </p>
